--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ h1 {
 <div id="popup">
     <div id="popup-content">
         <button id="close-btn">Close</button>
-        <iframe src="game.html" title="Embedded Game"></iframe>
+        <iframe src="Block_Blast/index.html" title="Embedded Game"></iframe>
     </div>
 </div>
 
