--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 /* Font Face */
 @font-face {
     font-family: 'Coconutz';
-    src: url('Coconutz.ttf') format('truetype');
+    src: url('/Coconutz.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
