--- a/404.html
+++ b/404.html
@@ -109,7 +109,7 @@ h1 {
 
 <div class="banner">
     <strong>Nerdtown Games is currently down.</strong><br>
-    Please email <a href="mailto:games.nerdtown+gustavs@gmail.com">games.nerdtown+gustavs@gmail.com</a> to notify us.
+   <!-- Please email <a href="mailto:games.nerdtown+gustavs@gmail.com">games.nerdtown+gustavs@gmail.com</a> to notify us.-->
 </div>
 
 <h1>We’ll be back soon!</h1>
