--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 /* Font Face */
 @font-face {
     font-family: 'Coconutz';
-    src: url('/Coconutz.ttf') format('truetype');
+    src: url('Coconutz.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -39,23 +39,37 @@ h1 {
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 }
 
-.quick-link {
-    background-color: #333;
-    color: #fff;
-    text-decoration: none;
-    padding: 12px 24px;
-    border-radius: 6px;
-    font-family: 'Coconutz', Arial, sans-serif;
-    font-size: 18px;
-    font-weight: 500;
-    transition: background-color 0.2s ease, transform 0.2s ease;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-    cursor: pointer;
+/* Game Grid */
+.game-container {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    margin-top: 30px;
 }
 
-.quick-link:hover {
-    background-color: #555;
-    transform: translateY(-3px);
+.game-tile {
+    width: 200px;
+    cursor: pointer;
+    text-align: center;
+    transition: transform 0.2s;
+}
+
+.game-tile:hover {
+    transform: translateY(-5px);
+}
+
+.game-img {
+    width: 200px;
+    height: 200px;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.25);
+    object-fit: cover;
+}
+
+.game-name {
+    margin-top: 10px;
+    font-size: 22px;
+    color: #222;
 }
 
 /* Popup Styles */
@@ -109,30 +123,56 @@ h1 {
 
 <div class="banner">
     <strong>Nerdtown Games is currently down.</strong><br>
-   <!-- Please email <a href="mailto:games.nerdtown+gustavs@gmail.com">games.nerdtown+gustavs@gmail.com</a> to notify us.-->
 </div>
 
 <h1>We’ll be back soon!</h1>
-<p>In the meantime, you can still play a game while we get stuff done on our end</p>
+<p>In the meantime, choose a game to play while we get stuff done on our end.</p>
 
-<button class="quick-link" id="playBtn">Play Game</button>
+<!-- Game Options -->
+<div class="game-container">
+    <div class="game-tile" data-game="/Block_Blast/index.html">
+        <img src="/Block_Blast/icon.png" class="game-img" alt="Block Blast">
+        <div class="game-name">Block Blast</div>
+    </div>
+
+    <div class="game-tile" data-game="/Snow_Rider_3D/index.html">
+        <img src="/Snow_Rider_3D/icon.png" class="game-img" alt="Snow Rider 3D">
+        <div class="game-name">Snow Rider 3D</div>
+    </div>
+</div>
 
 <!-- Popup -->
 <div id="popup">
     <div id="popup-content">
         <button id="close-btn">Close</button>
-        <iframe src="/Block_Blast/index.html" title="Embedded Game"></iframe>
+        <iframe id="game-frame" src="" title="Embedded Game"></iframe>
     </div>
 </div>
 
 <script>
 const popup = document.getElementById('popup');
-const playBtn = document.getElementById('playBtn');
+const frame = document.getElementById('game-frame');
 const closeBtn = document.getElementById('close-btn');
 
-playBtn.addEventListener('click', () => popup.style.display = 'flex');
-closeBtn.addEventListener('click', () => popup.style.display = 'none');
-window.addEventListener('click', e => { if (e.target === popup) popup.style.display = 'none'; });
+document.querySelectorAll('.game-tile').forEach(tile => {
+    tile.addEventListener('click', () => {
+        const game = tile.getAttribute('data-game');
+        frame.src = game;
+        popup.style.display = 'flex';
+    });
+});
+
+closeBtn.addEventListener('click', () => {
+    frame.src = ""; // stops game audio etc.
+    popup.style.display = 'none';
+});
+
+window.addEventListener('click', e => {
+    if (e.target === popup) {
+        frame.src = "";
+        popup.style.display = 'none';
+    }
+});
 </script>
 
 </body>
