--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@ h1 {
         <div class="game-name">Block Blast</div>
     </div>
 
-    <div class="game-tile" data-game="/Snow_Rider_3D/index.html">
-        <img src="/Snow_Rider_3D/icon.png" class="game-img" alt="Snow Rider 3D">
+    <div class="game-tile" data-game="/Snow_Rider_3d/index.html">
+        <img src="/Snow_Rider_3d/icon.png" class="game-img" alt="Snow Rider 3D">
         <div class="game-name">Snow Rider 3D</div>
     </div>
 </div>
